--- a/com.notepadqq.Notepadqq.yaml
+++ b/com.notepadqq.Notepadqq.yaml
@@ -1,5 +1,5 @@
 app-id: com.notepadqq.Notepadqq
-base: io.qt.qtwebkit.BaseApp
+base: io.qt.qtwebengine.BaseApp
 base-version: '5.15-23.08'
 runtime: org.kde.Platform
 runtime-version: '5.15-23.08'
